<resources>
    <string name="distance">Distance</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="volume">Volume</string>
    <string name="weight">Weight</string>
    <string name="angle">Angle</string>
    <string name="area">Area</string>
    <string name="energy">Energy</string>
    <string name="force">Force</string>
    <string name="pressure">Pressure</string>
    <string name="speed">Speed</string>
    <string name="additional_units">A\nd\nd\ni\nt\ni\no\nn\na\nl\n \nU\nn\ni\nt\ns</string>
    <string name="currency_button_name">Currency</string>
    <string name="units_button_name">Units</string>
    <string name="calculator_button">Calculator</string>
    <string name="additional_unit_categories_checkbox_name">Show additional unit categories</string>
    <string name="additional_units_checkbox_name">Show additional units</string>
    <string name="prefixes_button_name">Metric Prefixes</string>
    <string name="unit_input_label">Input Unit</string>
    <string name="unit_output_label">Output Unit</string>
    <string name="app_name">Crumble Converter</string>
    <string name="currency_converter_title">Currency</string>
    <string name="unit_category_chooser_title">Unit Categories</string>
    <string name="unit_converter_title">Units</string>
    <string name="calculator_title">Calculator</string>
    <string name="main_activity_title">Crumble Converter</string>
    <string name="prefix_activity_title">Metric Prefixes</string>
    <string name="from_currency_label">From currency:</string>
    <string name="from_currency_amount_label">From amount (default 1):</string>
    <string name="to_currency_label">To currency:</string>
    <string name="AED">United Arab Emirates Dirham</string>
    <string name="AFN">Afghanistan Afghani</string>
    <string name="ALL">Albania Lek</string>
    <string name="AMD">Armenia Dram</string>
    <string name="ANG">Netherlands Antilles Guilder</string>
    <string name="AOA">Angola Kwanza</string>
    <string name="ARS">Argentina Peso</string>
    <string name="AUD">Australia Dollar</string>
    <string name="AWG">Aruba Guilder</string>
    <string name="AZN">Azerbaijan New Manat</string>
    <string name="BAM">Bosnia and Herzegovina Convertible Marka</string>
    <string name="BBD">Barbados Dollar</string>
    <string name="BDT">Bangladesh Taka</string>
    <string name="BGN">Bulgaria Lev</string>
    <string name="BHD">Bahrain Dinar</string>
    <string name="BIF">Burundi Franc</string>
    <string name="BMD">Bermuda Dollar</string>
    <string name="BND">Brunei Darussalam Dollar</string>
    <string name="BOB">Bolivia Boliviano</string>
    <string name="BRL">Brazil Real</string>
    <string name="BSD">Bahamas Dollar</string>
    <string name="BTN">Bhutan Ngultrum</string>
    <string name="BWP">Botswana Pula</string>
    <string name="BYR">Belarus Ruble</string>
    <string name="BZD">Belize Dollar</string>
    <string name="CAD">Canada Dollar</string>
    <string name="CDF">Congo/Kinshasa Franc</string>
    <string name="CHF">Switzerland Franc</string>
    <string name="CLP">Chile Peso</string>
    <string name="CNY">China Yuan Renminbi</string>
    <string name="COP">Colombia Peso</string>
    <string name="CRC">Costa Rica Colon</string>
    <string name="CUC">Cuba Convertible Peso</string>
    <string name="CUP">Cuba Peso</string>
    <string name="CVE">Cape Verde Escudo</string>
    <string name="CZK">Czech Republic Koruna</string>
    <string name="DJF">Djibouti Franc</string>
    <string name="DKK">Denmark Krone</string>
    <string name="DOP">Dominican Republic Peso</string>
    <string name="DZD">Algeria Dinar</string>
    <string name="EGP">Egypt Pound</string>
    <string name="ERN">Eritrea Nakfa</string>
    <string name="ETB">Ethiopia Birr</string>
    <string name="EUR">Euro Member Countries</string>
    <string name="FJD">Fiji Dollar</string>
    <string name="FKP">Falkland Islands (Malvinas) Pound</string>
    <string name="GBP">United Kingdom Pound</string>
    <string name="GEL">Georgia Lari</string>
    <string name="GGP">Guernsey Pound</string>
    <string name="GHS">Ghana Cedi</string>
    <string name="GIP">Gibraltar Pound</string>
    <string name="GMD">Gambia Dalasi</string>
    <string name="GNF">Guinea Franc</string>
    <string name="GTQ">Guatemala Quetzal</string>
    <string name="GYD">Guyana Dollar</string>
    <string name="HKD">Hong Kong Dollar</string>
    <string name="HNL">Honduras Lempira</string>
    <string name="HRK">Croatia Kuna</string>
    <string name="HTG">Haiti Gourde</string>
    <string name="HUF">Hungary Forint</string>
    <string name="IDR">Indonesia Rupiah</string>
    <string name="ILS">Israel Shekel</string>
    <string name="IMP">Isle of Man Pound</string>
    <string name="INR">India Rupee</string>
    <string name="IQD">Iraq Dinar</string>
    <string name="IRR">Iran Rial</string>
    <string name="ISK">Iceland Krona</string>
    <string name="JEP">Jersey Pound</string>
    <string name="JMD">Jamaica Dollar</string>
    <string name="JOD">Jordan Dinar</string>
    <string name="JPY">Japan Yen</string>
    <string name="KES">Kenya Shilling</string>
    <string name="KGS">Kyrgyzstan Som</string>
    <string name="KHR">Cambodia Riel</string>
    <string name="KMF">Comoros Franc</string>
    <string name="KPW">Korea (North) Won</string>
    <string name="KRW">Korea (South) Won</string>
    <string name="KWD">Kuwait Dinar</string>
    <string name="KYD">Cayman Islands Dollar</string>
    <string name="KZT">Kazakhstan Tenge</string>
    <string name="LAK">Laos Kip</string>
    <string name="LBP">Lebanon Pound</string>
    <string name="LKR">Sri Lanka Rupee</string>
    <string name="LRD">Liberia Dollar</string>
    <string name="LSL">Lesotho Loti</string>
    <string name="LTL">Lithuania Litas</string>
    <string name="LVL">Latvia Lat</string>
    <string name="LYD">Libya Dinar</string>
    <string name="MAD">Morocco Dirham</string>
    <string name="MDL">Moldova Leu</string>
    <string name="MGA">Madagascar Ariary</string>
    <string name="MKD">Macedonia Denar</string>
    <string name="MMK">Myanmar (Burma) Kyat</string>
    <string name="MNT">Mongolia Tughrik</string>
    <string name="MOP">Macau Pataca</string>
    <string name="MRO">Mauritania Ouguiya</string>
    <string name="MUR">Mauritius Rupee</string>
    <string name="MVR">Maldives (Maldive Islands) Rufiyaa</string>
    <string name="MWK">Malawi Kwacha</string>
    <string name="MXN">Mexico Peso</string>
    <string name="MYR">Malaysia Ringgit</string>
    <string name="MZN">Mozambique Metical</string>
    <string name="NAD">Namibia Dollar</string>
    <string name="NGN">Nigeria Naira</string>
    <string name="NIO">Nicaragua Cordoba</string>
    <string name="NOK">Norway Krone</string>
    <string name="NPR">Nepal Rupee</string>
    <string name="NZD">New Zealand Dollar</string>
    <string name="OMR">Oman Rial</string>
    <string name="PAB">Panama Balboa</string>
    <string name="PEN">Peru Nuevo Sol</string>
    <string name="PGK">Papua New Guinea Kina</string>
    <string name="PHP">Philippines Peso</string>
    <string name="PKR">Pakistan Rupee</string>
    <string name="PLN">Poland Zloty</string>
    <string name="PYG">Paraguay Guarani</string>
    <string name="QAR">Qatar Riyal</string>
    <string name="RON">Romania New Leu</string>
    <string name="RSD">Serbia Dinar</string>
    <string name="RUB">Russia Ruble</string>
    <string name="RWF">Rwanda Franc</string>
    <string name="SAR">Saudi Arabia Riyal</string>
    <string name="SBD">Solomon Islands Dollar</string>
    <string name="SCR">Seychelles Rupee</string>
    <string name="SDG">Sudan Pound</string>
    <string name="SEK">Sweden Krona</string>
    <string name="SGD">Singapore Dollar</string>
    <string name="SHP">Saint Helena Pound</string>
    <string name="SLL">Sierra Leone Leone</string>
    <string name="SOS">Somalia Shilling</string>
    <string name="SPL">Seborga Luigino</string>
    <string name="SRD">Suriname Dollar</string>
    <string name="STD">São Tomé and Príncipe Dobra</string>
    <string name="SVC">El Salvador Colon</string>
    <string name="SYP">Syria Pound</string>
    <string name="SZL">Swaziland Lilangeni</string>
    <string name="THB">Thailand Baht</string>
    <string name="TJS">Tajikistan Somoni</string>
    <string name="TMT">Turkmenistan Manat</string>
    <string name="TND">Tunisia Dinar</string>
    <string name="TOP">Tonga Pa\'anga</string>
    <string name="TRY">Turkey Lira</string>
    <string name="TTD">Trinidad and Tobago Dollar</string>
    <string name="TVD">Tuvalu Dollar</string>
    <string name="TWD">Taiwan New Dollar</string>
    <string name="TZS">Tanzania Shilling</string>
    <string name="UAH">Ukraine Hryvna</string>
    <string name="UGX">Uganda Shilling</string>
    <string name="USD">United States Dollar</string>
    <string name="UYU">Uruguay Peso</string>
    <string name="UZS">Uzbekistan Som</string>
    <string name="VEF">Venezuela Bolivar</string>
    <string name="VND">Viet Nam Dong</string>
    <string name="VUV">Vanuatu Vatu</string>
    <string name="WST">Samoa Tala</string>
    <string name="XAF">Communauté Financière Africaine (BEAC) CFA Franc BEAC</string>
    <string name="XCD">East Caribbean Dollar</string>
    <string name="XDR">International Monetary Fund (IMF) Special Drawing Rights</string>
    <string name="XOF">Communauté Financière Africaine (BCEAO) Franc</string>
    <string name="XPF">Comptoirs Français du Pacifique (CFP) Franc</string>
    <string name="YER">Yemen Rial</string>
    <string name="ZAR">South Africa Rand</string>
    <string name="ZMK">Zambia Kwacha</string>
    <string name="ZWD">Zimbabwe Dollar</string>
    <string name="btnNum9">9</string>
    <string name="btnNum8">8</string>
    <string name="btnNum7">7</string>
    <string name="btnNum6">6</string>
    <string name="btnNum5">5</string>
    <string name="btnNum4">4</string>
    <string name="btnNum3">3</string>
    <string name="btnNum2">2</string>
    <string name="btnNum1">1</string>
    <string name="btnNum0">0</string>
    <string name="btnDiv">/</string>
    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <string name="btnMul">×</string>
    <string name="btnClear">AC</string>
    <string name="btnDel">Del</string>
    <string name="btnDecimalPoint">.</string>
    <string name="btnEqual">=</string>
    <string name="metric_prefix_page_title">Metric Prefixes</string>
    <string name="prefix_title">Prefix</string>
    <string name="yotta">yotta</string>
    <string name="zetta">zetta</string>
    <string name="exa">exa</string>
    <string name="peta">peta</string>
    <string name="tera">tera</string>
    <string name="giga">giga</string>
    <string name="mega">mega</string>
    <string name="kilo">kilo</string>
    <string name="hecto">hecto</string>
    <string name="deca">deca</string>
    <string name="deci">deci</string>
    <string name="centi">centi</string>
    <string name="milli">milli</string>
    <string name="micro">micro</string>
    <string name="nano">nano</string>
    <string name="pico">pico</string>
    <string name="femto">femto</string>
    <string name="atto">atto</string>
    <string name="zepto">zepto</string>
    <string name="yocto">yocto</string>
    <string name="exp_title">Exponential</string>
    <string name="yottaExp">24</string>
    <string name="zettaExp">21</string>
    <string name="exaExp">18</string>
    <string name="petaExp">15</string>
    <string name="teraExp">12</string>
    <string name="gigaExp">9</string>
    <string name="megaExp">6</string>
    <string name="kiloExp">3</string>
    <string name="hectoExp">2</string>
    <string name="decaExp">1</string>
    <string name="deciExp">-1</string>
    <string name="centiExp">-2</string>
    <string name="milliExp">-3</string>
    <string name="microExp">-6</string>
</resources>