<!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Hello World, UnitCategoryChooserActivity"
    />
</LinearLayout>
-->
<!-- <?xml version="1.0" encoding="utf-8"?> -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true" >

    <CheckBox
        android:id="@+id/additional_units_chekbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:text="@string/additional_units_checkbox_name" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="44dp"
        android:padding="12dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/distance_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <Button
                android:id="@+id/temperature_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature" />

            <Button
                android:id="@+id/time_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <Button
                android:id="@+id/volume_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/volume" />

            <Button
                android:id="@+id/weight_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <Button
                android:id="@+id/prefixes_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefixes_button_name"
                android:textColor="@color/red" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/additional_units_label"
                    android:layout_width="26dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/additional_units"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/additional_units_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <Button
                        android:id="@+id/angle_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/angle" />

                    <Button
                        android:id="@+id/area_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/area" />

                    <Button
                        android:id="@+id/energy_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/energy" />

                    <Button
                        android:id="@+id/force_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/force" />

                    <Button
                        android:id="@+id/pressure_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure" />

                    <Button
                        android:id="@+id/speed_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/speed" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>